tests/errors/self_outside_method.bs
// Test: Should FAIL - using self outside of method
fn main {
    int x = self.value
}
